--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -52,7 +52,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ path('app_beneficiaires_index', {'personnel': personnel }) }}" class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate"
+                                <a href="{{ path('app_beneficiaires_index') }}" class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate"
                                    data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Bénéficiaires</span>
