--- a/templates/beneficiaires/new.html.twig
+++ b/templates/beneficiaires/new.html.twig
@@ -1,11 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Beneficiaire{% endblock %}
+{% block title %}Modifier Bénéficiaire{% endblock %}
 
 {% block body %}
-    <h1>Create new Beneficiaire</h1>
-
-    {{ include('beneficiaires/_form.html.twig') }}
-
-    <a href="{{ path('app_beneficiaires_index') }}">back to list</a>
+    {% include 'beneficiaires/_menu.html.twig' %}
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col-8 col-sm-8 col-md-6 col-lg-8 col-xl-8">
+                        <h1>Modifier Bénéficiaire</h1>
+                        {{ include('beneficiaires/_form.html.twig') }}
+                        <a href="{{ path('app_beneficiaires_index') }}">back to list</a>
+                    </div>
+                </div>
+            </div>
+        </main>
+    {% include 'beneficiaires/_footer.html.twig' %}
 {% endblock %}
+
