--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -17,7 +17,7 @@
         </a>
         <div class="dropdown ms-2 align-self-center buttons">
             <button href="#" class="text-white dropdown-toggle btn btn-primary align-middle"
-                    data-bs-toggle="dropdown" aria-expanded="true">
+                    data-bs-toggle="dropdown" aria-expanded="false">
                 Nom d'utilisateur
             </button>
             <ul class="dropdown-menu">
@@ -52,7 +52,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ path('app_beneficiaires_index') }}" class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate"
+                                <a href="{{ path('app_beneficiaires_index', {'personnel': personnel }) }}" class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate"
                                    data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Bénéficiaires</span>
@@ -79,7 +79,7 @@
                         </ul>
                     </nav>
                     <hr class="d-md-none">
-                    <div class="d-md-none">
+                    <div class="d-sm-block d-md-none">
                         <div class="dropdown ms-2 align-self-center">
                             <button href="#" class="dropdown-toggle btn btn-outline-primary align-middle"
                                     data-bs-toggle="dropdown" aria-expanded="false">
