--- a/templates/beneficiaires/index.html.twig
+++ b/templates/beneficiaires/index.html.twig
@@ -18,6 +18,7 @@
                                 </div>
                             </div>
                         </div>
+{#                            {% component('PersonnelSearch') %}{% endcomponent %}#}
                         {% for message in app.flashes('success') %}
                             <div class="alert alert-success">
                                 {{ message }}
