--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -38,7 +38,7 @@
                     <nav>
                         <ul class="list-group">
                             <li>
-                                <a href="#" data-bs-parent="#sidebar"
+                                <a href="{{ path('app_interventions_index', {'personnel': personnel }) }}" data-bs-parent="#sidebar"
                                    class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Interventions</span>
