--- a/templates/beneficiaires/edit.html.twig
+++ b/templates/beneficiaires/edit.html.twig
@@ -10,7 +10,7 @@
                     <div class="col-8 col-sm-8 col-md-6 col-lg-8 col-xl-8 offset-lg-2">
                         <h1>Modifier Bénéficiaire</h1>
                         {{ include('beneficiaires/_form.html.twig') }}
-                        <a href="{{ path('app_beneficiaires_index', {'personnel': personnel.id }) }}" class="btn btn-warning my-2">Back to list</a>
+                        <a href="{{ path('app_beneficiaires_index', {'personnel': personnel.id }) }}" class="btn btn-warning my-2">Annuler</a>
                         {{ include('beneficiaires/_delete_form.html.twig') }}
                     </div>
                 </div>
