--- a/templates/interventions/_delete_form.html.twig
+++ b/templates/interventions/_delete_form.html.twig
@@ -1,4 +1,27 @@
-<form method="post" action="{{ path('app_interventions_delete', {'id': intervention.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ intervention.id) }}">
-    <button class="btn">Delete</button>
-</form>
+<button type="button"
+        class="btn btn-danger d-flex"
+        data-bs-toggle="modal"
+        data-bs-target="#deleteModal">
+    Supprimer
+</button>
+
+<div class="modal fade" id="deleteModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Suppression d'une intervention</h5>
+                <button type="button" class="btn-close" aria-label="Annuler suppression" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                Vous êtes sur de supprimer cette intervention?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Annuler</button>
+                <form id='deleteForm' method="post" action="{{ path('app_interventions_delete', {'id': intervention.id}) }}">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ intervention.id) }}">
+                    <button class="btn btn-danger">Supprimer</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
