--- a/templates/interventions/edit.html.twig
+++ b/templates/interventions/edit.html.twig
@@ -1,13 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Intervention{% endblock %}
+{% block title %}Modifier L'intervention{% endblock %}
 
 {% block body %}
-    <h1>Edit Intervention</h1>
-
-    {{ include('interventions/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_interventions_index') }}">back to list</a>
-
-    {{ include('interventions/_delete_form.html.twig') }}
+    {% include 'beneficiaires/_menu.html.twig' %}
+        <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-8 col-sm-8 col-md-6 col-lg-8 col-xl-8 offset-lg-2">
+                        <h1>Modifier L'intervention</h1>
+                        {{ include('interventions/_form.html.twig') }}
+                        <a href="{{ path('app_interventions_index', {'personnel': personnel.id }) }}" class="btn btn-warning my-2">Annuler</a>
+                        {{ include('interventions/_delete_form.html.twig') }}
+                    </div>
+                </div>
+            </div>
+        </main>
+    {% include 'beneficiaires/_footer.html.twig' %}
 {% endblock %}
+
