--- a/templates/interventions/index.html.twig
+++ b/templates/interventions/index.html.twig
@@ -1,47 +1,79 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Intervention index{% endblock %}
+{% block title %}Interventions{% endblock %}
 
 {% block body %}
-    <h1>Intervention index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>MontantPaye</th>
-                <th>DateFacture</th>
-                <th>MontantRealise</th>
-                <th>DateRealise</th>
-                <th>Divers</th>
-                <th>PieceNo</th>
-                <th>ExtraitNo</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for intervention in interventions %}
-            <tr>
-                <td>{{ intervention.id }}</td>
-                <td>{{ intervention.montantPaye }}</td>
-                <td>{{ intervention.dateFacture ? intervention.dateFacture|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ intervention.montantRealise ? 'Yes' : 'No' }}</td>
-                <td>{{ intervention.dateRealise ? intervention.dateRealise|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ intervention.divers }}</td>
-                <td>{{ intervention.pieceNo }}</td>
-                <td>{{ intervention.extraitNo }}</td>
-                <td>
-                    <a href="{{ path('app_interventions_show', {'id': intervention.id}) }}">show</a>
-                    <a href="{{ path('app_interventions_edit', {'id': intervention.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_interventions_new') }}">Create new</a>
+    {% block nav %}
+        {% include 'beneficiaires/_menu.html.twig' %}
+            <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-10 ps-md-2 pt-5">
+                <div class="container ">
+                    <div class="row">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-8 col-sm-8 col-md-6 col-lg-12 col-xl-12 mb-5 personnelForm">
+                                    {{ form_start(form) }}
+                                    {{ form_widget(form) }}
+                                        <button type="submit" class="btn btn-primary mt-2 mt-sm-3 mt-md-3 mt-lg-3">{{ button_label|default('Chercher') }}</button>
+                                    {{ form_end(form) }}
+                                </div>
+                            </div>
+                        </div>
+                        {% for message in app.flashes('success') %}
+                            <div class="alert alert-success">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                        {% for message in app.flashes('failure') %}
+                            <div class="alert alert-danger">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                        <h1>Bénéficiaires</h1>
+                        <div class="table-responsive tableOverflow overflow-auto border border-2 p-4 rounded-4">
+                            <a href="{{ path('app_interventions_new', {'personnel': personnel }) }}" class="btn btn-primary">Nouveau intervention</a>
+                            <table class="table table-hover mt-3">
+                                <thead>
+                                    <tr>
+                                        <th>Intervention</th>
+                                        <th>Bénéficiaire<th> 
+                                        <th>Date réalisé</th>
+                                        <th>Montant payé</th>
+                                        <th>Date référence</th>
+                                        <th>Réalisé</th>
+                                        <th>Divers</th>
+                                        <th>PieceNo</th>
+                                        <th>ExtraitNo</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                {% for intervention in interventions %}
+                                    <tr>
+                                        <td>{{ intervention.type }}</td>
+                                        <td>{{ intervention.beneficiaire.nomPrenom }}</td>
+                                        <td>{{ intervention.dateRealise ? intervention.dateRealise|date('d-m-Y') : '' }}</td>
+                                        <td>{{ intervention.montantPaye }}</td>
+                                        <td>{{ intervention.dateFacture ? intervention.dateFacture|date('d-m-Y') : '' }}</td>
+                                        <td>{{ intervention.montantRealise ? 'Oui' : 'Non' }}</td>
+                                        <td>{{ intervention.divers }}</td>
+                                        <td>{{ intervention.pieceNo }}</td>
+                                        <td>{{ intervention.extraitNo }}</td>
+                                        <td>
+                                            {# <a href="{{ path('app_interventions_show', {'id': intervention.id}) }}">show</a> #}
+                                            <a href="{{ path('app_interventions_edit', {'id': intervention.id}) }}" class="btn btn-warning">Modifier</a>
+                                        </td>
+                                    </tr>
+                                {% else %}
+                                    <tr>
+                                        <td colspan="9">Pas d'intervention</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        {% include 'beneficiaires/_footer.html.twig' %}
+    {% endblock %}
 {% endblock %}
