--- a/templates/interventions/edit.html.twig
+++ b/templates/interventions/edit.html.twig
@@ -4,18 +4,18 @@
 
 {% block body %}
     {% include 'beneficiaires/_menu.html.twig' %}
-        <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-8 col-sm-8 col-md-6 col-lg-8 col-xl-8 offset-lg-2">
-                        <h1>Modifier L'intervention</h1>
-                        {{ include('interventions/_form.html.twig') }}
-                        <a href="{{ path('app_interventions_index', {'personnel': personnel.id }) }}" class="btn btn-warning my-2">Annuler</a>
-                        {{ include('interventions/_delete_form.html.twig') }}
-                    </div>
+    <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5 mb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-8 col-sm-8 col-md-6 col-lg-8 col-xl-8 offset-lg-2">
+                    <h1>Modifier L'intervention</h1>
+                    {{ include('interventions/_form.html.twig') }}
+                    {{ include('interventions/_delete_form.html.twig') }}
+                    <a href="{{ path('app_interventions_index', {'personnel': personnel.id }) }}" class="btn btn-warning my-2">Annuler</a>
                 </div>
             </div>
-        </main>
+        </div>
+    </main>
     {% include 'beneficiaires/_footer.html.twig' %}
 {% endblock %}
 
