--- a/templates/interventions/new.html.twig
+++ b/templates/interventions/new.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {% include 'beneficiaires/_menu.html.twig' %}
-    <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5">
+    <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5 mb-5">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 offset-lg-2">
