--- a/templates/interventions/index.html.twig
+++ b/templates/interventions/index.html.twig
@@ -5,75 +5,74 @@
 {% block body %}
     {% block nav %}
         {% include 'beneficiaires/_menu.html.twig' %}
-            <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-10 ps-md-2 pt-5">
-                <div class="container ">
-                    <div class="row">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-8 col-sm-8 col-md-6 col-lg-12 col-xl-12 mb-5 personnelForm">
-                                    {{ form_start(form) }}
-                                    {{ form_widget(form) }}
-                                        <button type="submit" class="btn btn-primary mt-2 mt-sm-3 mt-md-3 mt-lg-3">{{ button_label|default('Chercher') }}</button>
-                                    {{ form_end(form) }}
-                                </div>
+        <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-10 ps-md-2 pt-5 mb-5">
+            <div class="container ">
+                <div class="row">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12 col-sm-12 col-md-6 col-lg-12 col-xl-12 mb-5 personnelForm">
+                                {{ form_start(form) }}
+                                {{ form_widget(form) }}
+                                <button type="submit" class="btn btn-primary">{{ button_label|default('Chercher') }}</button>
+                                {{ form_end(form) }}
                             </div>
-                        </div>
-                        {% for message in app.flashes('success') %}
-                            <div class="alert alert-success">
-                                {{ message }}
-                            </div>
-                        {% endfor %}
-                        {% for message in app.flashes('failure') %}
-                            <div class="alert alert-danger">
-                                {{ message }}
-                            </div>
-                        {% endfor %}
-                        <h1>Interventions</h1>
-                        <div class="table-responsive tableOverflow overflow-auto border border-2 p-4 rounded-4">
-                            <a href="{{ path('app_interventions_new', {'personnel': personnel }) }}" class="btn btn-primary">Nouvelle intervention</a>
-                            <table class="table table-hover mt-3">
-                                <thead>
-                                    <tr>
-                                        <th>Intervention</th>
-                                        <th>Bénéficiaire</th> 
-                                        <th>Date réalisé</th>
-                                        <th>Montant payé</th>
-                                        <th>Date référence</th>
-                                        <th>Réalisé</th>
-                                        <th>Divers</th>
-                                        <th>PieceNo</th>
-                                        <th>ExtraitNo</th>
-                                        <th>Actions</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                {% for intervention in interventions %}
-                                    <tr>
-                                        <td>{{ intervention.type }}</td>
-                                        <td>{{ intervention.beneficiaire.nomPrenom }}</td>
-                                        <td>{{ intervention.dateRealise ? intervention.dateRealise|date('d-m-Y') : '' }}</td>
-                                        <td>{{ intervention.montantPaye }}</td>
-                                        <td>{{ intervention.dateFacture ? intervention.dateFacture|date('d-m-Y') : '' }}</td>
-                                        <td>{{ intervention.montantRealise ? 'Oui' : 'Non' }}</td>
-                                        <td>{{ intervention.divers }}</td>
-                                        <td>{{ intervention.pieceNo }}</td>
-                                        <td>{{ intervention.extraitNo }}</td>
-                                        <td>
-                                            {# <a href="{{ path('app_interventions_show', {'id': intervention.id}) }}">show</a> #}
-                                            <a href="{{ path('app_interventions_edit', {'id': intervention.id}) }}" class="btn btn-warning">Modifier</a>
-                                        </td>
-                                    </tr>
-                                {% else %}
-                                    <tr>
-                                        <td colspan="9">Pas d'intervention</td>
-                                    </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
                         </div>
                     </div>
+                    {% for message in app.flashes('success') %}
+                        <div class="alert alert-success">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    {% for message in app.flashes('failure') %}
+                        <div class="alert alert-danger">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    <h1>Interventions</h1>
+                    <div class="table-responsive tableOverflow overflow-auto border border-2 p-4 rounded-4">
+                        <a href="{{ path('app_interventions_new', {'personnel': personnel }) }}" class="btn btn-primary">Nouvelle intervention</a>
+                        <table class="table table-hover mt-3">
+                            <thead>
+                                <tr>
+                                    <th>Intervention</th>
+                                    <th>Bénéficiaire</th>
+                                    <th>Date réalisé</th>
+                                    <th>Montant payé</th>
+                                    <th>Date référence</th>
+                                    <th>Réalisé</th>
+                                    <th>Divers</th>
+                                    <th>PieceNo</th>
+                                    <th>ExtraitNo</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for intervention in interventions %}
+                                <tr>
+                                    <td>{{ intervention.type }}</td>
+                                    <td>{{ intervention.beneficiaire.nomPrenom }}</td>
+                                    <td>{{ intervention.dateRealise ? intervention.dateRealise|date('d-m-Y') : '' }}</td>
+                                    <td>{{ intervention.montantPaye }}</td>
+                                    <td>{{ intervention.dateFacture ? intervention.dateFacture|date('d-m-Y') : '' }}</td>
+                                    <td>{{ intervention.montantRealise ? 'Oui' : 'Non' }}</td>
+                                    <td>{{ intervention.divers }}</td>
+                                    <td>{{ intervention.pieceNo }}</td>
+                                    <td>{{ intervention.extraitNo }}</td>
+                                    <td>
+                                        <a href="{{ path('app_interventions_edit', {'id': intervention.id}) }}" class="btn btn-warning">Modifier</a>
+                                    </td>
+                                </tr>
+                            {% else %}
+                                <tr>
+                                    <td colspan="9">Pas d'intervention</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-            </main>
+            </div>
+        </main>
         {% include 'beneficiaires/_footer.html.twig' %}
     {% endblock %}
 {% endblock %}
