--- a/templates/personnels/index.html.twig
+++ b/templates/personnels/index.html.twig
@@ -30,7 +30,7 @@
                     {% endfor %}
                     <h1>Agent</h1>
                     <div class="table-responsive tableOverflow overflow-auto border border-2 p-4 rounded-4">
-                        <a href="{{ path('app_personnels_new') }}" class="btn btn-primary">Nouveau agent</a>
+                        <a href="{{ path('app_personnels_new') }}" class="btn btn-primary">Nouvel agent</a>
                         <table class="table">
                             <thead>
                             <tr>
