--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -5,7 +5,7 @@
 }
 
 #sidebar{
-    height: calc(100vh - 4rem);
+    height: calc(100vh - 11vh);
 }
 
 @media (prefers-reduced-motion) {
@@ -43,3 +43,9 @@ option, .item {
 .plugin-clear_button  {
     padding: unset !important;
 }
+
+/* @media only screen and (max-width: 820px) {
+    .collapse:not(.show) {
+        display: none !important;
+    }
+} */
