--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -1,5 +1,6 @@
 <a href="#main" class="visually-hidden-focusable position-absolute z-1 text-primary bg-white p-1">Skip to main content</a>
-<div class="container-fluid p-0">
+<div class="container-fluid p-0 flex-grow-1">
+    <div class="row">
     <nav class="navbar d-flex justify-content-end bg-primary p-1">
         <button id="sidebarToggle"
                 data-sidebar-toggle-target="toggle"
@@ -22,7 +23,6 @@
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Se déconnecter</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
             </ul>
         </div>
     </nav>
@@ -32,13 +32,12 @@
         <div class="col-auto px-0">
             <div id="sidebar"
                  data-sidebar-toggle-target="sidebar"
-                    {{ stimulus_controller('viewport-sidebar') }}
-                 class="collapse collapse-horizontal border-end show">
+                 class="collapse collapse-horizontal border-end">
                 <div id="sidebar-nav" aria-label="Menu" class="list-group border-0 rounded-0 text-sm-start">
                     <nav>
                         <ul class="list-group">
                             <li>
-                                <a href="{{ path('app_interventions_index', {'personnel': personnel }) }}" data-bs-parent="#sidebar"
+                                <a href="#" data-bs-parent="#sidebar"
                                    class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Interventions</span>
@@ -58,7 +57,7 @@
                                     <span>Bénéficiaires</span>
                                 </a>
                             <li>
-                                <a href="{{ path('app_personnels_index', {'personnel': personnel }) }}"
+                                <a href="#"
                                    class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate" data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Signalétique</span>
@@ -87,7 +86,6 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Se déconnecter</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
                             </ul>
                         </div>
                     </div>
