--- a/templates/personnels/new.html.twig
+++ b/templates/personnels/new.html.twig
@@ -8,7 +8,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 offset-lg-2">
-                    <h1>Nouveau Agent</h1>
+                    <h1>Nouvel Agent</h1>
                     {{ include('personnels/_form.html.twig') }}
                     <a href="{{ path('app_personnels_index') }}" class="btn btn-warning mt-2">Annuler</a>
                 </div>
