--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -33,7 +33,7 @@
             <div id="sidebar"
                  data-sidebar-toggle-target="sidebar"
                     {{ stimulus_controller('viewport-sidebar') }}
-                 class="collapse collapse-horizontal show border-end">
+                 class="collapse collapse-horizontal border-end">
                 <div id="sidebar-nav" aria-label="Menu" class="list-group border-0 rounded-0 text-sm-start">
                     <nav>
                         <ul class="list-group">
