--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -22,7 +22,6 @@
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Se déconnecter</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
             </ul>
         </div>
     </nav>
@@ -32,46 +31,47 @@
         <div class="col-auto px-0">
             <div id="sidebar"
                  data-sidebar-toggle-target="sidebar"
-                    {{ stimulus_controller('viewport-sidebar') }}
                  class="collapse collapse-horizontal border-end">
                 <div id="sidebar-nav" aria-label="Menu" class="list-group border-0 rounded-0 text-sm-start">
                     <nav>
                         <ul class="list-group">
                             <li>
                                 <a href="{{ path('app_interventions_index', {'personnel': personnel }) }}" data-bs-parent="#sidebar"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate">
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
+                                    {% if app.request.attributes.get('_route') == 'app_interventions_index' %}bg-primary text-white{% endif %}">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Interventions</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate" data-bs-parent="#sidebar">
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') == 'app_consultations_index' %}bg-primary text-white{% endif %}" data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Consultations</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ path('app_beneficiaires_index', {'personnel': personnel }) }}" class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate"
+                                <a href="{{ path('app_beneficiaires_index', {'personnel': personnel }) }}" class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
+                                   {% if app.request.attributes.get('_route') == 'app_beneficiaires_index' %}bg-primary text-white{% endif %}"
                                    data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Bénéficiaires</span>
                                 </a>
                             <li>
-                                <a href="{{ path('app_personnels_index', {'personnel': personnel }) }}"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate" data-bs-parent="#sidebar">
+                                <a href="#"
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') == 'app_personnels_index' %}bg-primary text-white{% endif %}" data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Signalétique</span>
                                 </a>
                             </li>
                             <li><a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate"
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') == 'app_fetedesenfants_index' %}bg-primary text-white{% endif %}"
                                    data-bs-parent="#sidebar"><i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Fête des enfants</span>
                                 </a>
                             </li>
                             <li><a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate"
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') == 'app_globals_index' %}bg-primary text-white{% endif %}"
                                    data-bs-parent="#sidebar"><i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Global pour l'année 2024</span>
                                 </a>
@@ -87,7 +87,6 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Se déconnecter</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
                             </ul>
                         </div>
                     </div>
