--- a/templates/interventions/edit.html.twig
+++ b/templates/interventions/edit.html.twig
@@ -7,11 +7,13 @@
     <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5 mb-5">
         <div class="container">
             <div class="row">
-                <div class="col-8 col-sm-8 col-md-6 col-lg-8 col-xl-8 offset-lg-2">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8 offset-lg-2 d-inline-block">
                     <h1>Modifier L'intervention</h1>
                     {{ include('interventions/_form.html.twig') }}
-                    {{ include('interventions/_delete_form.html.twig') }}
-                    <a href="{{ path('app_interventions_index', {'personnel': personnel.id }) }}" class="btn btn-warning my-2">Annuler</a>
+                    <div class="d-flex justify-content-between">
+                        <a href="{{ path('app_interventions_index', {'personnel': personnel.id|default }) }}"><button class="btn btn-warning">Annuler</button></a>
+                        <button class="btn btn-success" form="intervention">{{ button_label|default('Sauvegarder') }}</button>
+                    </div>
                 </div>
             </div>
         </div>
