--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -28,12 +28,12 @@
 </div>
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <div class="col-auto px-0">
+        <div class="col-auto px-0 z-3 bg-white sidebarPosition">
             <div id="sidebar"
                  data-sidebar-toggle-target="sidebar"
                  class="collapse collapse-horizontal border-end">
                 <div id="sidebar-nav" aria-label="Menu" class="list-group border-0 rounded-0 text-sm-start">
-                    <nav>
+                    <nav class="py-1">
                         <ul class="list-group">
                             <li>
                                 <a href="{{ path('app_interventions_index', {'personnel': personnel }) }}" data-bs-parent="#sidebar"
