--- a/templates/interventions/index.html.twig
+++ b/templates/interventions/index.html.twig
@@ -49,7 +49,7 @@
                             <tbody>
                             {% for intervention in pager %}
                                 <tr>
-                                    <td>{{ intervention.type }}</td>
+                                    <td>{{ intervention.type.name }}</td>
                                     <td>{{ intervention.beneficiaire.nomPrenom }}</td>
                                     <td>{{ intervention.dateRealise ? intervention.dateRealise|date('d-m-Y') : '' }}</td>
                                     <td>{{ intervention.montantPaye }}</td>
